added clases from h1, h2, p

--- a/html/privacy-policy.html
+++ b/html/privacy-policy.html
@@ -167,16 +167,16 @@
           <a href="./my-account.html" class="bradcrumbs__link">Privacy policy</a>
         </div>
         <section class="privacy">
-          <h1>Policy regarding the processing of personal data</h1>
-          <h2>1. General Provisions</h2>
-          <p>
+          <h1 class="sign-in__title privacy">Policy regarding the processing<br/> of personal data</h1>
+          <h2 class="privacy__subtitle">1. General Provisions</h2>
+          <p class="privacy__text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec cursus augue nec augue ultrices volutpat. Aliquam in eleifend ex, vel fringilla nibh. Donec tristique fermentum risus ac sodales. Integer a ipsum eu libero auctor faucibus sed et nunc. Morbi accumsan a lectus ut varius. Interdum et malesuada fames ac ante ipsum primis in faucibus.
 
             1.1. Nulla efficitur vulputate ex, sit amet ultrices sem eleifend vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam a tincidunt justo. Sed varius ligula sapien, nec pellentesque velit ullamcorper sit amet. Phasellus lacinia, odio at elementum placerat, justo sem iaculis elit, eu ornare est nulla ut risus. Aenean consequat odio non lorem scelerisque blandit.
             1.2. Nam iaculis purus ipsum, at blandit leo efficitur ac. Curabitur placerat lectus a dapibus efficitur. Aliquam id urna ut ante cursus facilisis ultrices semper nunc. Suspendisse dolor odio, sagittis dignissim pretium id, pulvinar sed eros. Maecenas leo justo, molestie ac elementum ac, tempus eu mauris. Sed ipsum orci, pretium blandit diam vitae, malesuada vestibulum ex. Phasellus lobortis sodales efficitur. Donec gravida est in augue elementum fringilla. In leo massa, semper non massa vitae, aliquet pretium elit. Ut eleifend accumsan fringilla. Quisque mauris tortor, dignissim eget lectus quis, hendrerit finibus tortor. Ut venenatis, risus ac malesuada interdum, quam odio faucibus quam, eget convallis elit felis ac enim.
           </p>
-          <h2>2. Basic concepts used in the Policy</h2>
-          <p>
+          <h2 class="privacy__subtitle">2. Basic concepts used in the Policy</h2>
+          <p class="privacy__text">
             2.1. Etiam dapibus nisl ac aliquet fringilla. Cras mollis ultricies augue. Fusce vel interdum dolor.
             2.2. Donec a magna nulla. Donec orci erat, pharetra ut urna vel, sagittis feugiat purus. Aenean sollicitudin bibendum molestie.
             2.3. Donec ultricies erat eu eros suscipit egestas. Donec rutrum commodo leo, consectetur pulvinar tortor tempus ac. Vestibulum rutrum ullamcorper mi id pellentesque. Vivamus at nisi pellentesque, ornare enim a, egestas mi. Aenean hendrerit felis vel sagittis elementum.
@@ -186,8 +186,8 @@
             2.7. Maecenas euismod convallis turpis, et posuere ante feugiat eget. Pellentesque vel sapien eget tortor faucibus consectetur ut eu velit. Aenean in pellentesque tortor.
             2.8. Etiam lorem metus, bibendum eget massa id, fermentum viverra lacus. Aliquam ultricies pellentesque nunc in condimentum. Praesent ligula neque, congue et quam nec, placerat mollis mi. Sed molestie mi vel libero dictum, ac convallis erat sollicitudin. Duis nisi dui, congue ac ipsum a, varius laoreet urna. Sed ante justo, aliquam nec aliquet quis, tincidunt ut metus. Morbi vitae dapibus quam.
           </p>
-          <h2>3. Basic rights and obligations</h2>
-          <p>
+          <h2 class="privacy__subtitle">3. Basic rights and obligations</h2>
+          <p class="privacy__text">
             3.1. Etiam dapibus nisl ac aliquet fringilla:
             -Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec cursus augue nec augue ultrices volutpat. Aliquam in eleifend ex, vel fringilla nibh. Donec tristique fermentum risus ac sodales;
             -Integer a ipsum eu libero auctor faucibus sed et nunc. Morbi accumsan a lectus ut varius. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla efficitur vulputate ex, sit amet ultrices sem eleifend vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam a tincidunt justo.
