--- a/html/contact.html
+++ b/html/contact.html
@@ -251,7 +251,7 @@
             </li>
             <li class="list-item"><a class="footer-link" href="#">FAQ</a></li>
             <li class="list-item">
-              <a class="footer-link" href="#">Privacy policy</a>
+              <a class="footer-link" href="./privacy-policy.html">Privacy policy</a>
             </li>
           </ul>
           <div class="social-networks">
