added new shop-page

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a href="./html/sign-in.html">Sign In</a>
     <br />
     <a href="./html/my-account.html">My-account</a>
+    <br />
+    <a href="./html/shop.html">Shop</a>
   </body>
 </html>
