--- a/html/shop.html
+++ b/html/shop.html
@@ -9,6 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="../css/privacy-policy.css" />
+    <link rel="stylesheet" href="../css/shop.css">
   </head>
   <body>
     <header class="navigation">
@@ -159,7 +160,110 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+        <section class="exclusive-deals">
+        <div class="container">
+          
+          <div class="card-wrapper">
+            <div class="card-container active">
+              <div class="card-sale">
+                <span class="card-sale-text">Sale</span>
+              </div>
+
+              <img class="card-img" src="../img/tube.png" alt="tube" />
+              <p class="card-text">Lorem ipsum dolor sit amet</p>
+
+              <div class="card-price-container">
+                <div class="price-container">
+                  <span class="card-price">$50</span>
+                  <span class="card-price sale">$70</span>
+                </div>
+
+                <div class="button-container">
+                  <button type="button" class="button-heart">
+                    <svg class="heart" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Heart"></use>
+                    </svg>
+                  </button>
+                  <button type="button" class="button-solid">
+                    <svg class="icon-Solid" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Solid"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+
+              <button class="btn-card-add btn" type="button">
+                Add to cart
+              </button>
+            </div>
+
+            <div class="card-container">
+              <div class="card-sale hidden">
+                <span class="card-sale-text">Sale</span>
+              </div>
+
+              <img class="card-img" src="../img/tube.png" alt="tube" />
+              <p class="card-text">Lorem ipsum dolor sit amet</p>
+
+              <div class="card-price-container">
+                <span class="card-price">$80</span>
+
+                <div class="button-container">
+                  <button class="btn-card hidden" type="button">
+                    <svg class="heart" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Heart"></use>
+                    </svg>
+                  </button>
+                  <button class="btn-card hidden" type="button">
+                    <svg class="icon-Solid" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Solid"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+
+              <button class="btn-card-add btn" type="button">
+                Add to cart
+              </button>
+            </div>
+
+            <div class="card-container active last">
+              <div class="card-sale">
+                <span class="card-sale-text">Sale</span>
+              </div>
+
+              <img class="card-img" src="../img/tube.png" alt="tube" />
+              <p class="card-text">Lorem ipsum dolor sit amet</p>
+
+              <div class="card-price-container">
+                <div class="price-container">
+                  <span class="card-price">$50</span>
+                  <span class="card-price sale">$70</span>
+                </div>
+
+                <div class="button-container">
+                  <button type="button" class="button-heart">
+                    <svg class="heart" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Heart"></use>
+                    </svg>
+                  </button>
+                  <button type="button" class="button-solid">
+                    <svg class="icon-Solid" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Solid"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+
+              <button class="btn-card-add btn" type="button">
+                Add to cart
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer class="footer">
       <div class="container">
