corect card image

--- a/html/shop.html
+++ b/html/shop.html
@@ -199,7 +199,7 @@
             </div>
 
             <div class="card-container">
-              <div class="card-sale hidden">
+              <div class="card-sale">
                 <span class="card-sale-text">Sale</span>
               </div>
 
