--- a/html/shop.html
+++ b/html/shop.html
@@ -178,7 +178,7 @@
                 <span class="card-sale-text">Sale</span>
               </div>
 
-              <img class="card-img" src="../img/tube.png" alt="tube" />
+              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
               <p class="card-text">Lorem ipsum dolor sit amet</p>
 
               <div class="card-price-container">
@@ -211,7 +211,7 @@
                 <span class="card-sale-text">Sale</span>
               </div>
 
-              <img class="card-img" src="../img/tube.png" alt="tube" />
+              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
               <p class="card-text">Lorem ipsum dolor sit amet</p>
 
               <div class="card-price-container">
@@ -243,7 +243,106 @@
                 <span class="card-sale-text">Sale</span>
               </div>
 
-              <img class="card-img" src="../img/tube.png" alt="tube" />
+              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
+              <p class="card-text">Lorem ipsum dolor sit amet</p>
+
+              <div class="card-price-container">
+                <div class="price-container">
+                  <span class="card-price">$50</span>
+                  <span class="card-price sale">$70</span>
+                </div>
+
+                <div class="button-container">
+                  <button type="button" class="button-heart">
+                    <svg class="heart" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Heart"></use>
+                    </svg>
+                  </button>
+                  <button type="button" class="button-solid">
+                    <svg class="icon-Solid" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Solid"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+
+              <button class="btn-card-add btn" type="button">
+                Add to cart
+              </button>
+            </div>
+
+            <div class="card-container">
+              <div class="card-sale">
+                <span class="card-sale-text">Sale</span>
+              </div>
+
+              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
+              <p class="card-text">Lorem ipsum dolor sit amet</p>
+
+              <div class="card-price-container">
+                <div class="price-container">
+                  <span class="card-price">$50</span>
+                  <span class="card-price sale">$70</span>
+                </div>
+
+                <div class="button-container">
+                  <button type="button" class="button-heart">
+                    <svg class="heart" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Heart"></use>
+                    </svg>
+                  </button>
+                  <button type="button" class="button-solid">
+                    <svg class="icon-Solid" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Solid"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+
+              <button class="btn-card-add btn" type="button">
+                Add to cart
+              </button>
+            </div>
+
+            <div class="card-container">
+              <div class="card-sale">
+                <span class="card-sale-text">Sale</span>
+              </div>
+
+              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
+              <p class="card-text">Lorem ipsum dolor sit amet</p>
+
+              <div class="card-price-container">
+                <div class="price-container">
+                  <span class="card-price">$50</span>
+                  <span class="card-price sale">$70</span>
+                </div>
+
+                <div class="button-container">
+                  <button type="button" class="button-heart">
+                    <svg class="heart" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Heart"></use>
+                    </svg>
+                  </button>
+                  <button type="button" class="button-solid">
+                    <svg class="icon-Solid" width="24" height="24">
+                      <use href="../img/sprite.svg#icon-Solid"></use>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+
+              <button class="btn-card-add btn" type="button">
+                Add to cart
+              </button>
+            </div>
+
+            <div class="card-container">
+              <div class="card-sale">
+                <span class="card-sale-text">Sale</span>
+              </div>
+
+              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
               <p class="card-text">Lorem ipsum dolor sit amet</p>
 
               <div class="card-price-container">
