raplace tag <div> from unorder list

--- a/html/shop.html
+++ b/html/shop.html
@@ -172,8 +172,8 @@
           <a href="#" class="bradcrumbs__link">Category</a>
         </div>
           
-          <div class="card-wrapper">
-            <div class="card-container">
+          <ul class="card-wrapper">
+            <li class="card-container">
               <div class="card-sale">
                 <span class="card-sale-text">Sale</span>
               </div>
@@ -204,9 +204,9 @@
               <button class="btn-card-add btn" type="button">
                 Add to cart
               </button>
-            </div>
+            </li>
 
-            <div class="card-container">
+            <li class="card-container">
               <div class="card-sale">
                 <span class="card-sale-text">Sale</span>
               </div>
@@ -236,9 +236,9 @@
               <button class="btn-card-add btn" type="button">
                 Add to cart
               </button>
-            </div>
+            </li>
 
-            <div class="card-container">
+            <li class="card-container">
               <div class="card-sale">
                 <span class="card-sale-text">Sale</span>
               </div>
@@ -269,9 +269,9 @@
               <button class="btn-card-add btn" type="button">
                 Add to cart
               </button>
-            </div>
+            </li>
 
-            <div class="card-container">
+            <li class="card-container">
               <div class="card-sale">
                 <span class="card-sale-text">Sale</span>
               </div>
@@ -302,9 +302,9 @@
               <button class="btn-card-add btn" type="button">
                 Add to cart
               </button>
-            </div>
+            </li>
 
-            <div class="card-container">
+            <li class="card-container">
               <div class="card-sale">
                 <span class="card-sale-text">Sale</span>
               </div>
@@ -335,9 +335,9 @@
               <button class="btn-card-add btn" type="button">
                 Add to cart
               </button>
-            </div>
+            </li>
 
-            <div class="card-container">
+            <li class="card-container">
               <div class="card-sale">
                 <span class="card-sale-text">Sale</span>
               </div>
@@ -368,8 +368,8 @@
               <button class="btn-card-add btn" type="button">
                 Add to cart
               </button>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
