--- a/html/shop-category.html
+++ b/html/shop-category.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
    
-    <link rel="stylesheet" href="../css/shop.css">
+    <link rel="stylesheet" href="../css/shop-category.css">
   </head>
   <body>
     <header class="navigation">
