added new page shop.html

--- a/html/shop.html
+++ b/html/shop.html
@@ -8,8 +8,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
-   
-    <link rel="stylesheet" href="../css/shop-category.css">
+
+    <link rel="stylesheet" href="../css/home.css" />
   </head>
   <body>
     <header class="navigation">
@@ -160,219 +160,33 @@
       </div>
     </header>
 
-    <main>
+     <main>
         <section class="exclusive-deals">
         <div class="container">
-
-          <div class="bradcrumbs">
-          <a href="./home.html" class="bradcrumbs__link">Vital-J Empowering</a>
-          <span>&#10095;</span>
-          <a href="./shop.html" class="bradcrumbs__link">Shop</a>
-          <span>&#10095;</span>
-          <a href="#" class="bradcrumbs__link">Category</a>
-        </div>
-          
-          <ul class="card-wrapper">
-            <li class="card-container">
-              <div class="card-sale">
-                <span class="card-sale-text">Sale</span>
-              </div>
-
-              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
-              <p class="card-text">Lorem ipsum dolor sit amet</p>
-
-              <div class="card-price-container">
-                <div class="price-container">
-                  <span class="card-price">$50</span>
-                  <span class="card-price sale">$70</span>
+            <div class="bradcrumbs">
+                    <a href="./home.html" class="bradcrumbs__link">Vital-J Empowering</a>
+                    <span>&#10095;</span>
+                    <a href="./shop.html" class="bradcrumbs__link">Shop</a>
                 </div>
 
-                <div class="button-container">
-                  <button type="button" class="button-heart">
-                    <svg class="heart" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Heart"></use>
-                    </svg>
-                  </button>
-                  <button type="button" class="button-solid">
-                    <svg class="icon-Solid" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Solid"></use>
-                    </svg>
-                  </button>
-                </div>
-              </div>
+          <h2 class="exclusive-deals-title">Shop</h2>
+         
+          <div class="card-wrapper">
+            <div class="card-container active">
+              <img class="card-img" src="../img/tube.png" alt="tube" />
+            </div>
 
-              <button class="btn-card-add btn" type="button">
-                Add to cart
-              </button>
-            </li>
+            <div class="card-container">
+              <img class="card-img" src="../img/tube.png" alt="tube" />             
+            </div>
 
-            <li class="card-container">
-              <div class="card-sale">
-                <span class="card-sale-text">Sale</span>
-              </div>
-
-              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
-              <p class="card-text">Lorem ipsum dolor sit amet</p>
-
-              <div class="card-price-container">
-                <div class="price-container">
-                  <span class="card-price">$80</span>
-                  <span class="card-price sale">$70</span>
-                </div>
-                <div class="button-container">
-                  <button class="button-heart" type="button">
-                    <svg class="heart" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Heart"></use>
-                    </svg>
-                  </button>
-                  <button class="button-solid" type="button">
-                    <svg class="icon-Solid" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Solid"></use>
-                    </svg>
-                  </button>
-                </div>
-              </div>
-
-              <button class="btn-card-add btn" type="button">
-                Add to cart
-              </button>
-            </li>
-
-            <li class="card-container">
-              <div class="card-sale">
-                <span class="card-sale-text">Sale</span>
-              </div>
-
-              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
-              <p class="card-text">Lorem ipsum dolor sit amet</p>
-
-              <div class="card-price-container">
-                <div class="price-container">
-                  <span class="card-price">$50</span>
-                  <span class="card-price sale">$70</span>
-                </div>
-
-                <div class="button-container">
-                  <button type="button" class="button-heart">
-                    <svg class="heart" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Heart"></use>
-                    </svg>
-                  </button>
-                  <button type="button" class="button-solid">
-                    <svg class="icon-Solid" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Solid"></use>
-                    </svg>
-                  </button>
-                </div>
-              </div>
-
-              <button class="btn-card-add btn" type="button">
-                Add to cart
-              </button>
-            </li>
-
-            <li class="card-container">
-              <div class="card-sale">
-                <span class="card-sale-text">Sale</span>
-              </div>
-
-              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
-              <p class="card-text">Lorem ipsum dolor sit amet</p>
-
-              <div class="card-price-container">
-                <div class="price-container">
-                  <span class="card-price">$50</span>
-                  <span class="card-price sale">$70</span>
-                </div>
-
-                <div class="button-container">
-                  <button type="button" class="button-heart">
-                    <svg class="heart" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Heart"></use>
-                    </svg>
-                  </button>
-                  <button type="button" class="button-solid">
-                    <svg class="icon-Solid" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Solid"></use>
-                    </svg>
-                  </button>
-                </div>
-              </div>
-
-              <button class="btn-card-add btn" type="button">
-                Add to cart
-              </button>
-            </li>
-
-            <li class="card-container">
-              <div class="card-sale">
-                <span class="card-sale-text">Sale</span>
-              </div>
-
-              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
-              <p class="card-text">Lorem ipsum dolor sit amet</p>
-
-              <div class="card-price-container">
-                <div class="price-container">
-                  <span class="card-price">$50</span>
-                  <span class="card-price sale">$70</span>
-                </div>
-
-                <div class="button-container">
-                  <button type="button" class="button-heart">
-                    <svg class="heart" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Heart"></use>
-                    </svg>
-                  </button>
-                  <button type="button" class="button-solid">
-                    <svg class="icon-Solid" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Solid"></use>
-                    </svg>
-                  </button>
-                </div>
-              </div>
-
-              <button class="btn-card-add btn" type="button">
-                Add to cart
-              </button>
-            </li>
-
-            <li class="card-container">
-              <div class="card-sale">
-                <span class="card-sale-text">Sale</span>
-              </div>
-
-              <img class="card-img" src="../img/icons/shop/tube-small.png" alt="tube" />
-              <p class="card-text">Lorem ipsum dolor sit amet</p>
-
-              <div class="card-price-container">
-                <div class="price-container">
-                  <span class="card-price">$50</span>
-                  <span class="card-price sale">$70</span>
-                </div>
-
-                <div class="button-container">
-                  <button type="button" class="button-heart">
-                    <svg class="heart" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Heart"></use>
-                    </svg>
-                  </button>
-                  <button type="button" class="button-solid">
-                    <svg class="icon-Solid" width="24" height="24">
-                      <use href="../img/sprite.svg#icon-Solid"></use>
-                    </svg>
-                  </button>
-                </div>
-              </div>
-
-              <button class="btn-card-add btn" type="button">
-                Add to cart
-              </button>
-            </li>
-          </ul>
+            <div class="card-container active last">
+              <img class="card-img" src="../img/tube.png" alt="tube" />
+            </div>
+          </div>
         </div>
       </section>
-    </main>
+
 
     <footer class="footer">
       <div class="container">
