--- a/html/shop.html
+++ b/html/shop.html
@@ -174,14 +174,17 @@
           <div class="card-wrapper">
             <div class="card-container active">
               <img class="card-img" src="../img/tube.png" alt="tube" />
+              <h2>Category 1</h2>
             </div>
 
             <div class="card-container">
-              <img class="card-img" src="../img/tube.png" alt="tube" />             
+              <img class="card-img" src="../img/tube.png" alt="tube" />
+              <h2>Category 2</h2>          
             </div>
 
             <div class="card-container active last">
               <img class="card-img" src="../img/tube.png" alt="tube" />
+              <h2>Category 3</h2>
             </div>
           </div>
         </div>
