corect the card-container__title

--- a/html/shop.html
+++ b/html/shop.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
 
-    <link rel="stylesheet" href="../css/home.css" />
+    <link rel="stylesheet" href="../css/shop.css" />
   </head>
   <body>
     <header class="navigation">
@@ -174,17 +174,17 @@
           <div class="card-wrapper">
             <div class="card-container active">
               <img class="card-img" src="../img/tube.png" alt="tube" />
-              <h2>Category 1</h2>
+              <h2 class="card-container__title">Category 1</h2>
             </div>
 
             <div class="card-container">
               <img class="card-img" src="../img/tube.png" alt="tube" />
-              <h2>Category 2</h2>          
+              <h2 class="card-container__title">Category 2</h2>          
             </div>
 
             <div class="card-container active last">
               <img class="card-img" src="../img/tube.png" alt="tube" />
-              <h2>Category 3</h2>
+              <h2 class="card-container__title">Category 3</h2>
             </div>
           </div>
         </div>
