replace with card-container__title from card-container__link

--- a/html/shop.html
+++ b/html/shop.html
@@ -174,17 +174,17 @@
           <div class="card-wrapper">
             <div class="card-container active">
               <img class="card-img" src="../img/tube.png" alt="tube" />
-              <h2 class="card-container__title">Category 1</h2>
+              <a href="../html/shop-category.html" class="card-container__link">Category 1</a>
             </div>
 
             <div class="card-container">
               <img class="card-img" src="../img/tube.png" alt="tube" />
-              <h2 class="card-container__title">Category 2</h2>          
+              <a href="../html/shop-category.html" class="card-container__link">Category 2</a>          
             </div>
 
             <div class="card-container active last">
               <img class="card-img" src="../img/tube.png" alt="tube" />
-              <h2 class="card-container__title">Category 3</h2>
+              <a href="../html/shop-category.html" class="card-container__link">Category 3</a>
             </div>
           </div>
         </div>
