added new block card-container__box

--- a/html/shop.html
+++ b/html/shop.html
@@ -171,22 +171,28 @@
 
           <h2 class="exclusive-deals-title">Shop</h2>
          
-          <div class="card-wrapper">
-            <div class="card-container active">
-              <img class="card-img" src="../img/tube.png" alt="tube" />
+          <ul class="card-wrapper">
+            <li class="card-container active">
+              <div class="card-container__box">
+                <img class="card-img" src="../img/tube.png" alt="tube" />
+              </div>
               <a href="../html/shop-category.html" class="card-container__link">Category 1</a>
-            </div>
+            </li>
 
-            <div class="card-container">
-              <img class="card-img" src="../img/tube.png" alt="tube" />
+            <li class="card-container">
+              <div class="card-container__box">
+                <img class="card-img" src="../img/tube.png" alt="tube" />
+              </div>
               <a href="../html/shop-category.html" class="card-container__link">Category 2</a>          
-            </div>
+            </li>
 
-            <div class="card-container active last">
-              <img class="card-img" src="../img/tube.png" alt="tube" />
+            <li class="card-container active last">
+              <div class="card-container__box">
+                <img class="card-img" src="../img/tube.png" alt="tube" />
+              </div>
               <a href="../html/shop-category.html" class="card-container__link">Category 3</a>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </section>
 
