--- a/html/shop-category.html
+++ b/html/shop-category.html
@@ -171,6 +171,13 @@
           <span>&#10095;</span>
           <a href="#" class="bradcrumbs__link">Category</a>
         </div>
+
+        <h1 class="exclusive-deals-title">Category 1</h1>
+
+        <div class="container-filter">
+          <button class="btn-card-add btn">Filters</button>
+          <button class="btn-card-add btn">Sort by</button>
+        </div>
           
           <ul class="card-wrapper">
             <li class="card-container">
