added modificate new class container-filter

--- a/html/shop-category.html
+++ b/html/shop-category.html
@@ -175,8 +175,8 @@
         <h1 class="exclusive-deals-title">Category 1</h1>
 
         <div class="container-filter">
-          <button class="btn-card-add btn">Filters</button>
-          <button class="btn-card-add btn">Sort by</button>
+          <button class="btn-card-add container-filter btn">Filters</button>
+          <button class="btn-card-add container-filter btn">Sort by</button>
         </div>
           
           <ul class="card-wrapper">
