update nav home page

--- a/html/home.html
+++ b/html/home.html
@@ -68,10 +68,9 @@
             </li>
             <li class="navigation-main-list__item">
               <a href="#" class="navigation-main-list__item-link">
-                <details>
-                  <summary>Shop</summary>
-                </details>
+                  Shop
               </a>
+              <span class="navigation-main-list__item curret">&#10095;</span>
             </li>
             <li class="navigation-main-list__item">
               <a href="./contact.html" class="navigation-main-list__item-link"
