--- a/html/home.html
+++ b/html/home.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/home.css" />
   </head>
   <body>
+    <!----------------- HEADER ------------------------>
     <header class="navigation">
       <div class="navigation-top">
         <div class="container container-flex top">
@@ -70,7 +71,21 @@
               <a href="#" class="navigation-main-list__item-link">
                   Shop
               </a>
-              <span class="navigation-main-list__item curret">&#10095;</span>
+              <button class="btnArrow">
+                <svg class="btnArrow no-rotate" width="16" height="16">
+                  <use href="../img/sprite.svg#icon-arrow-down">
+                  </use>
+                </svg>
+              </button>
+              <article class="click-category">
+                <ul class="click-category__list">
+                  <li class="click-category__item">Category 1</li>
+                  <li class="click-category__item">Category 2</li>
+                  <li class="click-category__item">Category 3</li>
+                  <li class="click-category__item">Category 4</li>
+                  <li class="click-category__item">Category 5</li>
+                </ul>
+              </article>
             </li>
             <li class="navigation-main-list__item">
               <a href="./contact.html" class="navigation-main-list__item-link"
@@ -161,7 +176,9 @@
         </div>
       </div>
     </header>
+    <!---------------- end/HEADER --------------------->
 
+    <!----------------- MAIN -------------------------->
     <main>
       <section class="hero">
         <div class="container">
@@ -441,7 +458,9 @@
         </div>
       </section>
     </main>
+    <!----------------- end/MAIN ---------------------->
 
+    <!----------------- FOOTER ------------------------>
     <footer class="footer">
       <div class="container">
         <a class="footer-logo-link" href="./home.html">
@@ -869,7 +888,9 @@
         </div>
       </div>
     </footer>
+    <!----------------- end/FOOTER -------------------->
     <script src="../js/burger.js"></script>
     <script src="../js/search.js"></script>
+    <script src="../js/click-category.js"></script>
   </body>
 </html>
