--- a/html/home.html
+++ b/html/home.html
@@ -79,11 +79,11 @@
               </button>
               <article class="click-category">
                 <ul class="click-category__list">
-                  <li class="click-category__item">Category 1</li>
-                  <li class="click-category__item">Category 2</li>
-                  <li class="click-category__item">Category 3</li>
-                  <li class="click-category__item">Category 4</li>
-                  <li class="click-category__item">Category 5</li>
+                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html" target="_blank" rel="noopener noreferrer">Category 1</a></li>
+                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html" target="_blank" rel="noopener noreferrer">Category 2</a></li>
+                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html" target="_blank" rel="noopener noreferrer">Category 3</a></li>
+                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html" target="_blank" rel="noopener noreferrer">Category 4</a></li>
+                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html" target="_blank" rel="noopener noreferrer">Category 5</a></li>
                 </ul>
               </article>
             </li>
