--- a/html/home.html
+++ b/html/home.html
@@ -68,7 +68,7 @@
               <a href="#" class="navigation-main-list__item-link">About us</a>
             </li>
             <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">
+              <a href="./shop.html" class="navigation-main-list__item-link">
                   Shop
               </a>
               <button class="btnArrow">
@@ -79,11 +79,11 @@
               </button>
               <article class="click-category">
                 <ul class="click-category__list">
-                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html" target="_blank" rel="noopener noreferrer">Category 1</a></li>
-                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html" target="_blank" rel="noopener noreferrer">Category 2</a></li>
-                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html" target="_blank" rel="noopener noreferrer">Category 3</a></li>
-                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html" target="_blank" rel="noopener noreferrer">Category 4</a></li>
-                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html" target="_blank" rel="noopener noreferrer">Category 5</a></li>
+                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html"  rel="noopener noreferrer">Category 1</a></li>
+                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html"  rel="noopener noreferrer">Category 2</a></li>
+                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html"  rel="noopener noreferrer">Category 3</a></li>
+                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html"  rel="noopener noreferrer">Category 4</a></li>
+                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html"  rel="noopener noreferrer">Category 5</a></li>
                 </ul>
               </article>
             </li>
@@ -146,8 +146,8 @@
             </a>
             <ul>
               <li><a href="./home.html">Home</a></li>
-              <li><a href="">About us</a></li>
-              <li><a href="">Shop</a></li>
+              <li><a href="#">About us</a></li>
+              <li><a href="./shop.html">Shop</a></li>
               <li><a href="./contact.html">Contact us</a></li>
               <li><a href="">FAQ</a></li>
             </ul>
@@ -471,12 +471,12 @@
 
         <div class="footer-wrapper">
           <ul class="list footer-list">
-            <li class="list-item"><a class="footer-link" href="#">Home</a></li>
+            <li class="list-item"><a class="footer-link" href="./home.html">Home</a></li>
             <li class="list-item">
               <a class="footer-link" href="#">About us</a>
             </li>
             <li class="list-item">
-              <a class="footer-link" href="#">Contact us</a>
+              <a class="footer-link" href="./contact.html">Contact us</a>
             </li>
             <li class="list-item"><a class="footer-link" href="#">FAQ</a></li>
             <li class="list-item">
@@ -487,21 +487,21 @@
             <h4 class="footer-link">Get in touch</h4>
             <ul class="list footer-list-networks">
               <li class="footer-list-item">
-                <a href="./home.html">
+                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
                   <svg class="facebook social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-list-item">
-                <a href="./home.html">
+                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
                   <svg class="twiter social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-tweeter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-list-item">
-                <a href="./home.html">
+                <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
                   <svg class="instagram social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-instagram"></use>
                   </svg>
