edit with footer-logo

--- a/html/home.html
+++ b/html/home.html
@@ -464,7 +464,7 @@
     <footer class="footer">
       <div class="container">
         <a class="footer-logo-link" href="./home.html">
-          <svg class="logo footer" width="77px" height="47px">
+          <svg class="logo footer" width="114" height="69.77">
             <use href="../img/sprite.svg#icon-footer-logo"></use>
           </svg>
         </a>
