--- a/html/home.html
+++ b/html/home.html
@@ -69,21 +69,55 @@
             </li>
             <li class="navigation-main-list__item">
               <a href="./shop.html" class="navigation-main-list__item-link">
-                  Shop
+                Shop
               </a>
               <button class="btnArrow">
                 <svg class="btnArrow no-rotate" width="16" height="16">
-                  <use href="../img/sprite.svg#icon-arrow-down">
-                  </use>
+                  <use href="../img/sprite.svg#icon-arrow-down"></use>
                 </svg>
               </button>
               <article class="click-category">
                 <ul class="click-category__list">
-                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html"  rel="noopener noreferrer">Category 1</a></li>
-                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html"  rel="noopener noreferrer">Category 2</a></li>
-                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html"  rel="noopener noreferrer">Category 3</a></li>
-                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html"  rel="noopener noreferrer">Category 4</a></li>
-                  <li class="click-category__item"><a class="click-category__link" href="./shop-category.html"  rel="noopener noreferrer">Category 5</a></li>
+                  <li class="click-category__item">
+                    <a
+                      class="click-category__link"
+                      href="./shop-category.html"
+                      rel="noopener noreferrer"
+                      >Category 1</a
+                    >
+                  </li>
+                  <li class="click-category__item">
+                    <a
+                      class="click-category__link"
+                      href="./shop-category.html"
+                      rel="noopener noreferrer"
+                      >Category 2</a
+                    >
+                  </li>
+                  <li class="click-category__item">
+                    <a
+                      class="click-category__link"
+                      href="./shop-category.html"
+                      rel="noopener noreferrer"
+                      >Category 3</a
+                    >
+                  </li>
+                  <li class="click-category__item">
+                    <a
+                      class="click-category__link"
+                      href="./shop-category.html"
+                      rel="noopener noreferrer"
+                      >Category 4</a
+                    >
+                  </li>
+                  <li class="click-category__item">
+                    <a
+                      class="click-category__link"
+                      href="./shop-category.html"
+                      rel="noopener noreferrer"
+                      >Category 5</a
+                    >
+                  </li>
                 </ul>
               </article>
             </li>
@@ -471,7 +505,9 @@
 
         <div class="footer-wrapper">
           <ul class="list footer-list">
-            <li class="list-item"><a class="footer-link" href="./home.html">Home</a></li>
+            <li class="list-item">
+              <a class="footer-link" href="./home.html">Home</a>
+            </li>
             <li class="list-item">
               <a class="footer-link" href="#">About us</a>
             </li>
@@ -480,28 +516,42 @@
             </li>
             <li class="list-item"><a class="footer-link" href="#">FAQ</a></li>
             <li class="list-item">
-              <a class="footer-link" href="./privacy-policy.html">Privacy policy</a>
+              <a class="footer-link" href="./privacy-policy.html"
+                >Privacy policy</a
+              >
             </li>
           </ul>
           <div class="social-networks">
             <h4 class="footer-link">Get in touch</h4>
             <ul class="list footer-list-networks">
               <li class="footer-list-item">
-                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">
+                <a
+                  href="https://www.facebook.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <svg class="facebook social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-list-item">
-                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+                <a
+                  href="https://twitter.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <svg class="twiter social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-tweeter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-list-item">
-                <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer">
+                <a
+                  href="https://www.instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
                   <svg class="instagram social-icon" width="24px" height="24px">
                     <use href="../img/sprite.svg#icon-instagram"></use>
                   </svg>
@@ -513,7 +563,7 @@
         <div class="list-social-wrapper">
           <ul class="list list-social">
             <li class="list-social-item">
-              <a href="#"></a>
+              <a href="#">
                 <svg
                   width="39"
                   height="30"
