add footer extra class

--- a/html/home.html
+++ b/html/home.html
@@ -496,7 +496,7 @@
 
     <!----------------- FOOTER ------------------------>
     <footer class="footer">
-      <div class="container">
+      <div class="container container-footer">
         <a class="footer-logo-link" href="./home.html">
           <svg class="logo footer">
             <use href="../img/sprite.svg#icon-footer-logo"></use>
