--- a/html/home.html
+++ b/html/home.html
@@ -268,6 +268,11 @@
             to receive exclusive deals & gifts
           </h4>
           <div class="card-wrapper">
+            <button type="button" class="">
+              <svg class="" width="29" height="52">
+                <use href="../img/sprite.svg#icon-arrow-left"></use>
+              </svg>
+            </button>
             <div class="card-container active">
               <div class="card-sale">
                 <span class="card-sale-text">Sale</span>
@@ -363,6 +368,11 @@
                 Add to cart
               </button>
             </div>
+            <button type="button" class="">
+              <svg class="" width="29" height="52">
+                <use href="../img/sprite.svg#icon-arrow-right"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
