--- a/html/home.html
+++ b/html/home.html
@@ -268,9 +268,24 @@
             to receive exclusive deals & gifts
           </h4>
           <div class="card-wrapper">
-            <button type="button" class="">
-              <svg class="" width="29" height="52">
-                <use href="../img/sprite.svg#icon-arrow-left"></use>
+            <button type="button" class="card-wrapper__button-arrow">
+              <svg
+                width="29.000000"
+                height="52.000000"
+                viewBox="0 0 29 52"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <desc>Created with Pixso.</desc>
+                <defs />
+                <path
+                  id="Vector"
+                  d="M0.68 27.62L25.29 51.38C25.7 51.77 26.25 52 26.81 52C27.38 52 27.93 51.77 28.34 51.38L28.36 51.35C28.56 51.16 28.72 50.93 28.83 50.67C28.94 50.41 29 50.14 29 49.86C29 49.58 28.94 49.3 28.83 49.05C28.72 48.79 28.56 48.56 28.36 48.37L5.19 25.99L28.36 3.62C28.56 3.43 28.72 3.2 28.83 2.94C28.94 2.69 29 2.41 29 2.13C29 1.85 28.94 1.58 28.83 1.32C28.72 1.06 28.56 0.83 28.36 0.64L28.34 0.61C27.93 0.22 27.38 0 26.81 0C26.25 0 25.7 0.22 25.29 0.61L0.68 24.37C0.46 24.58 0.29 24.84 0.17 25.11C0.06 25.39 0 25.69 0 26C0 26.3 0.06 26.6 0.17 26.88C0.29 27.15 0.46 27.41 0.68 27.62Z"
+                  fill="#5E92B6"
+                  fill-opacity="1.000000"
+                  fill-rule="nonzero"
+                />
               </svg>
             </button>
             <div class="card-container active">
@@ -368,9 +383,24 @@
                 Add to cart
               </button>
             </div>
-            <button type="button" class="">
-              <svg class="" width="29" height="52">
-                <use href="../img/sprite.svg#icon-arrow-right"></use>
+            <button type="button" class="card-wrapper__button-arrow">
+              <svg
+                width="29.000000"
+                height="52.000000"
+                viewBox="0 0 29 52"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <desc>Created with Pixso.</desc>
+                <defs />
+                <path
+                  id="Vector"
+                  d="M28.31 24.37L3.7 0.61C3.29 0.22 2.74 0 2.18 0C1.61 0 1.06 0.22 0.65 0.61L0.63 0.64C0.43 0.83 0.27 1.06 0.16 1.32C0.05 1.58 0 1.85 0 2.13C0 2.41 0.05 2.69 0.16 2.94C0.27 3.2 0.43 3.43 0.63 3.62L23.8 26L0.63 48.37C0.43 48.56 0.27 48.79 0.16 49.05C0.05 49.3 0 49.58 0 49.86C0 50.14 0.05 50.41 0.16 50.67C0.27 50.93 0.43 51.16 0.63 51.35L0.65 51.38C1.06 51.77 1.61 52 2.18 52C2.74 52 3.29 51.77 3.7 51.38L28.31 27.62C28.53 27.41 28.7 27.15 28.82 26.88C28.93 26.6 29 26.3 29 26C29 25.69 28.93 25.39 28.82 25.11C28.7 24.84 28.53 24.58 28.31 24.37Z"
+                  fill="#5E92B6"
+                  fill-opacity="1.000000"
+                  fill-rule="nonzero"
+                />
               </svg>
             </button>
           </div>
