--- a/html/home.html
+++ b/html/home.html
@@ -268,7 +268,7 @@
             to receive exclusive deals & gifts
           </h4>
           <div class="card-wrapper">
-            <button type="button" class="card-wrapper__button-arrow">
+            <button type="button" class="card-wrapper__button-arrow left">
               <svg
                 width="29.000000"
                 height="52.000000"
@@ -383,7 +383,7 @@
                 Add to cart
               </button>
             </div>
-            <button type="button" class="card-wrapper__button-arrow">
+            <button type="button" class="card-wrapper__button-arrow right">
               <svg
                 width="29.000000"
                 height="52.000000"
@@ -982,5 +982,6 @@
     <script src="../js/burger.js"></script>
     <script src="../js/search.js"></script>
     <script src="../js/click-category.js"></script>
+    <script src="../js/home-slider.js"></script>
   </body>
 </html>
