added section paginations

--- a/html/shop-category.html
+++ b/html/shop-category.html
@@ -380,6 +380,20 @@
           <button type="submit" class="btn-card-add submit btn">See more</button>
         </div>
       </section>
+      <section class="paginations">
+        <div class="container">
+          <div class="paginations-buttons">
+            <button></button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>...</button>
+            <button>7</button>
+            <button></button>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
