--- a/html/shop-category.html
+++ b/html/shop-category.html
@@ -385,12 +385,12 @@
           <div class="paginations-buttons">
             <button class="paginations-buttons__btn">
               <svg width="9.166992" height="15.835938" viewBox="0 0 9.16699 15.8359" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-	<desc>
-			Created with Pixso.
-	</desc>
-	<defs/>
-	<path id="Icon" d="M8.8 0.36C9.28 0.85 9.28 1.64 8.8 2.13L3.01 7.91L8.8 13.69C9.28 14.18 9.28 14.98 8.8 15.46C8.31 15.95 7.52 15.95 7.03 15.46L0.36 8.8C-0.13 8.31 -0.13 7.51 0.36 7.03L7.03 0.36C7.52 -0.13 8.31 -0.13 8.8 0.36Z" fill="#272727" fill-opacity="1.000000" fill-rule="evenodd"/>
-</svg>
+              <desc>
+                  Created with Pixso.
+              </desc>
+              <defs/>
+	            <path id="Icon" d="M8.8 0.36C9.28 0.85 9.28 1.64 8.8 2.13L3.01 7.91L8.8 13.69C9.28 14.18 9.28 14.98 8.8 15.46C8.31 15.95 7.52 15.95 7.03 15.46L0.36 8.8C-0.13 8.31 -0.13 7.51 0.36 7.03L7.03 0.36C7.52 -0.13 8.31 -0.13 8.8 0.36Z" fill="#272727" fill-opacity="1.000000" fill-rule="evenodd"/>
+              </svg>
             </button>
             <button class="paginations-buttons__btn">1</button>
             <button class="paginations-buttons__btn">2</button>
@@ -398,13 +398,15 @@
             <button class="paginations-buttons__btn">4</button>
             <button class="paginations-buttons__btn">...</button>
             <button class="paginations-buttons__btn">7</button>
-            <button class="paginations-buttons__btn"><svg width="9.166992" height="15.835938" viewBox="0 0 9.16699 15.8359" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-	<desc>
-			Created with Pixso.
-	</desc>
-	<defs/>
-	<path id="Icon" d="M0.36 0.36C0.85 -0.13 1.64 -0.13 2.13 0.36L8.8 7.03C9.28 7.51 9.28 8.31 8.8 8.8L2.13 15.46C1.64 15.95 0.85 15.95 0.36 15.46C-0.13 14.98 -0.13 14.18 0.36 13.69L6.14 7.91L0.36 2.13C-0.13 1.64 -0.13 0.85 0.36 0.36Z" fill="#272727" fill-opacity="1.000000" fill-rule="evenodd"/>
-</svg></button>
+            <button class="paginations-buttons__btn">
+              <svg width="9.166992" height="15.835938" viewBox="0 0 9.16699 15.8359" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+	            <desc>
+			        Created with Pixso.
+	            </desc>
+	            <defs/>
+	            <path id="Icon" d="M0.36 0.36C0.85 -0.13 1.64 -0.13 2.13 0.36L8.8 7.03C9.28 7.51 9.28 8.31 8.8 8.8L2.13 15.46C1.64 15.95 0.85 15.95 0.36 15.46C-0.13 14.98 -0.13 14.18 0.36 13.69L6.14 7.91L0.36 2.13C-0.13 1.64 -0.13 0.85 0.36 0.36Z" fill="#272727" fill-opacity="1.000000" fill-rule="evenodd"/>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
