--- a/html/shop-category.html
+++ b/html/shop-category.html
@@ -172,7 +172,7 @@
               </fieldset>
 
               <fieldset>
-                <label for="checkPrice">Price</label>
+                <legend>Price</legend>
                 <input type="range" min="0" max="80000" id="checkPrice">
                 <label for="">From</label>
                 <input type="number" placeholder="0">
@@ -193,7 +193,7 @@
               </fieldset>
 
               <fieldset>
-                <legend>Gender</legend>
+                <legend class="form-filters__title">Gender</legend>
                 <input class="form-filters__check" type="checkbox" id="checkMale">
                 <label for="checkMale">Male</label>
                 <input class="form-filters__check" type="checkbox" id="checkFemale">
