added container for price-select

--- a/html/shop-category.html
+++ b/html/shop-category.html
@@ -222,12 +222,16 @@
           <button type="button" class="btn-card-add container-filter btn">Sort by</button>
         </div>
 
-        <label for="price-select">Sort by:</label>
-        <select name="price" id="price-select">
-          <option value="cheap-first">Price (cheap first)</option>
-          <option value="expensive-first">Price (expensive first)</option>
-          <option value="popular">Popular</option>
-        </select>
+        <div class="container-filter-price">
+          <label for="price-select">Sort by:</label>
+          <select name="price" id="price-select">
+            <option value="cheap-first">Price (cheap first)</option>
+            <hr>
+            <option value="expensive-first">Price (expensive first)</option>
+            <hr>
+            <option value="popular">Popular</option>
+          </select>
+        </div>
           
           <ul class="card-wrapper">
             <li class="card-container">
