--- a/html/shop-category.html
+++ b/html/shop-category.html
@@ -166,7 +166,7 @@
             <div class="container">
               <form class="form-filters">
                 <fieldset>
-                  <legend class="form-filters__title">Filters</legend>
+                  <legend class="sign-in__label">Filters</legend>
                   <div class="label-container">
                     <label class="sign-in__label">
                       <input type="checkbox" class="checkbox" name="remember" />
@@ -177,16 +177,16 @@
                 </fieldset>
   
                 <fieldset>
-                  <legend>Price</legend>
+                  <legend class="sign-in__label">Price</legend>
                   <input type="range" min="0" max="80000" id="checkPrice">
-                  <label for="">From</label>
+                  <label class="sign-in__label" for="">From</label>
                   <input type="number" placeholder="0">
-                  <label for="">to</label>
+                  <label class="sign-in__label" for="">to</label>
                   <input type="number" placeholder="80000">
                 </fieldset>
   
                 <fieldset>
-                  <legend class="form-filters__title">Release form</legend>
+                  <legend class="sign-in__label">Release form</legend>
                   <div class="label-container">
                     <label class="sign-in__label">
                       <input type="checkbox" class="checkbox" name="remember" />
@@ -218,7 +218,7 @@
                 </fieldset>
   
                 <fieldset>
-                  <legend class="form-filters__title">Gender</legend>
+                  <legend class="sign-in__label">Gender</legend>
                   <div class="label-container">
                     <label class="sign-in__label">
                       <input type="checkbox" class="checkbox" name="remember" />
