update media from container

--- a/html/shop-category.html
+++ b/html/shop-category.html
@@ -191,7 +191,7 @@
 
               <fieldset>
                 <legend class="sign-in__label">Price</legend>
-                <input type="range" min="0" max="80000" id="checkPrice">
+                <input class="input-price" type="range" min="0" max="80000" id="checkPrice">
                 <label class="sign-in__label" for="">From</label>
                 <input type="number" placeholder="0">
                 <label class="sign-in__label" for="">to</label>
