correct teaxarea with sign-in__subtext

--- a/html/contact.html
+++ b/html/contact.html
@@ -205,7 +205,7 @@
                     placeholder="Put your e-mail"
                   />
 
-                  <label for="yourMessage" class="sign-in__subtext"
+                  <label for="yourMessage" class="sign-in__subtext area"
                     >Your message</label
                   >
                   <textarea
