script connection values category

--- a/html/shop.html
+++ b/html/shop.html
@@ -679,5 +679,6 @@
     </footer>
     <script src="../js/burger.js"></script>
     <script src="../js/search.js"></script>
+    <script src="../js/click-category.js"></script>
   </body>
 </html>
