--- a/html/contact.html
+++ b/html/contact.html
@@ -737,5 +737,6 @@
     <!----------------- end/FOOTER -------------------->
     <script src="../js/burger.js"></script>
     <script src="../js/search.js"></script>
+    <script src="../js/click-category.js"></script>
   </body>
 </html>
