added a new page product-card.html

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <a href="./html/my-account.html">My-account</a>
     <br />
     <a href="./html/shop.html">Shop</a>
+    <br />
+    <a href="./html/product-card.html">Product-card</a>
   </body>
 </html>
