--- a/html/product-card.html
+++ b/html/product-card.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="../css/home.css" />
+    <link rel="stylesheet" href="../css/product-card.css" />
   </head>
   <body>
     <!----------------- HEADER ------------------------>
@@ -220,9 +220,9 @@
           <span>&#10095;</span>
           <a href="./shop.html" class="bradcrumbs__link">Shop</a>
           <span>&#10095;</span>
-          <a href="#" class="bradcrumbs__link">Category</a>
+          <a href="./shop-category.html" class="bradcrumbs__link">Category</a>
           <span>&#10095;</span>
-          <a href="#" class="bradcrumbs__link">Product</a>
+          <a href="./product-card.html" class="bradcrumbs__link">Product</a>
         </div>
       </div>
     </main>
