added marcup from main-form

--- a/html/product-card.html
+++ b/html/product-card.html
@@ -225,6 +225,53 @@
           <a href="./product-card.html" class="bradcrumbs__link">Product</a>
         </div>
       </div>
+
+      <section class="main-form">
+        <div class="container">
+          <form>
+            <img class="card-img" src="../img/tube.png" alt="tube" />
+            <h1>Lorem ipsum dolor sit amet</h1>
+            <fieldset>
+              <legend class="sign-in__label">Choose a flavor</legend>
+              <div class="label-container">
+                <label class="sign-in__label">
+                  <input type="checkbox" class="checkbox" name="variety" />
+                  <span class="checkbox-icon"></span>
+                  Lorem ipsum
+                </label>
+              </div>
+              <div class="label-container">
+                <label class="sign-in__label">
+                  <input type="checkbox" class="checkbox" name="variety" />
+                  <span class="checkbox-icon"></span>
+                  Dolor sit amet
+                </label>
+              </div>
+              <div class="label-container">
+                <label class="sign-in__label">
+                  <input type="checkbox" class="checkbox" name="variety" />
+                  <span class="checkbox-icon"></span>
+                  Consectetur adipiscing
+                </label>
+              </div>
+              <div class="label-container">
+                <label class="sign-in__label">
+                  <input type="checkbox" class="checkbox" name="variety" />
+                  <span class="checkbox-icon"></span>
+                  Proin vulputate
+                </label>
+              </div>
+              <div class="label-container">
+                <label class="sign-in__label">
+                  <input type="checkbox" class="checkbox" name="variety" />
+                  <span class="checkbox-icon"></span>
+                  Convallis turpis
+                </label>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+      </section>
     </main>
     <!----------------- end/MAIN ---------------------->
 
