--- a/html/product-card.html
+++ b/html/product-card.html
@@ -269,6 +269,23 @@
                 </label>
               </div>
             </fieldset>
+            <fieldset>
+              <legend class="sign-in__label">Not available</legend>
+              <div class="label-container">
+                <label class="sign-in__label">
+                  <input type="checkbox" class="checkbox" name="variety" />
+                  <span class="checkbox-icon"></span>
+                  Proin vulputate
+                </label>
+              </div>
+              <div class="label-container">
+                <label class="sign-in__label">
+                  <input type="checkbox" class="checkbox" name="variety" />
+                  <span class="checkbox-icon"></span>
+                  Convallis turpis
+                </label>
+              </div>
+            </fieldset>
           </form>
         </div>
       </section>
